<resources>
    <string name="app_name">My Database</string>
    <string name="title_add_fragment">EMPLOYEE DATA</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_position">Position</string>
    <string name="button_add">ADD</string>
    <string name="toolbar_search">search</string>
    <string name="menu_nav_list">list</string>
    <string name="menu_nav_add">add</string>
    <string name="title_dialog">Editing employee data</string>
    <string name="button_change">change</string>
</resources>